Added local storage

--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>To Do App</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
+      integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <main class="todo">
-        <form class="todo__form">
-            
-            <input class="todo__form-input" name="toDoTask" placeholder="Your Task">
-            <button class="todo__form-btn" type="submit">ADD Task</button>
-        </form>
-        <div class="todo__task">
-            <ul class="todo__list">
-               <!-- <li class="todo__list-item">Marchewka <span class="todo__list-remove">X</span></li>-->
-                 
-            </ul>
-        </div>
+      <form class="todo__form">
+        <input
+          class="todo__form-input"
+          name="toDoTask"
+          placeholder="Your Task"
+        />
+        <button class="todo__form-btn" type="submit">ADD Task</button>
+      </form>
+      <div class="todo__task">
+        <ul class="todo__list"></ul>
+      </div>
     </main>
     <script src="scripts.js"></script>
-</body>
+  </body>
 </html>
