Fixed local storage bug

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           name="toDoTask"
           placeholder="Your Task"
         />
-        <button class="todo__form-btn" type="submit">ADD Task</button>
+        <button class="todo__form-btn" type="submit">Add Task</button>
       </form>
       <div class="todo__task">
         <ul class="todo__list"></ul>
